# dotfiles

./: .stow-local-ignore  CreateSymlinks.ps1  LICENSE  README.md  RemoveSymlinks.ps1  WindowsMappings.ps1  syncWindows.ps1
.config/kitty/: kitty.conf
WindowsTerminal/: settings.json
alacritty/: alacritty.toml
kitty/: kitty.conf
templates/latex/: main.tex
templates/python/: pyproject.toml
