[project]
name = "***"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "numpy==2.4.4",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "pandas==3.0.2",
    "networkx==3.6.1",
    "matplotlib==3.10.9",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
